--- a/scss/_queries.scss
+++ b/scss/_queries.scss
@@ -139,6 +139,10 @@
         height: auto;
     }
 
+    footer nav ul li{
+        padding: 2%;
+    }
+
     
 }
 
